@@ -48,6 +48,7 @@
   is parse by the server but ommited until the moment of the implementation. (Reference http://dev.mysql.com/doc/refman/5.0/en/create-index.html)
   An index_col_name specification can end with ASC or DESC. These keywords are permitted for future extensions for specifying ascending or descending 
   index value storage. Currently, they are parsed but ignored; index values are always stored in ascending order.  (Oracle db Bug # 13481709).
+- Fix for bug on Create Index via Server Explorer. Comment property and Index type were not added in the definition of the Index. (Oracle db bug # 13481314).
 
 
 Version 6.3.7
